unpackaged/main/default/objects/axcessa_Group__c/axcessa_Group__c.object-meta.xml
<CustomObject>
    <label>aXcessa Group</label>
    <nameField>
        <label>aXcessa Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aXcessa Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>