unpackaged/main/default/objects/axcessa_Group__c/fields/Active_Store_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Active_Store_Rollup__c</fullName>
    <label>Active Store Rollup</label>
    <summaryFilterItems>
        <field>axcessa_Platform_Engagement__c.Store_Status_Text__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>axcessa_Platform_Engagement__c.axcessa_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>