unpackaged/main/default/objects/axcessa_Group__c/fields/axcessa_Group_ID_18__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>aXcessa Group ID (18)</label>
    <type>Text</type>
</CustomField>