unpackaged/main/default/objects/axcessa_Group__c/fields/axcessa_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group_Name__c</fullName>
    <label>aXcessa Group Name (code)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>