unpackaged/main/default/objects/axcessa_Group__c/fields/axcessa_Product__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>aXcessa Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>aXcessa Groups</relationshipLabel>
    <relationshipName>axcessa_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>