unpackaged/main/default/objects/axcessa_Group__c/fields/Centralized_Support__c.field-meta.xml
<CustomField>
    <fullName>Centralized_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked group has been moved to centralized support.</inlineHelpText>
    <label>Centralized Support</label>
    <type>Checkbox</type>
</CustomField>