unpackaged/main/default/objects/axcessa_Group__c/fields/Group_Contact__c.field-meta.xml
<CustomField>
    <fullName>Group_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary Contact for this axcessa Group</inlineHelpText>
    <label>Group Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>axcessa_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>