unpackaged/main/default/objects/axcessa_Group__c/fields/Group_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_List_Name__c</fullName>
    <formula>Name &amp; &quot;: &quot; &amp;  Group_Status__c &amp; &quot; (&quot; &amp; TEXT( Number_of_Active_Stores__c ) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group List Name (Code)</label>
    <type>Text</type>
</CustomField>