unpackaged/main/default/objects/axcessa_Group__c/fields/Number_of_Active_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Stores__c</fullName>
    <label>Active Stores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>