unpackaged/main/default/objects/axcessa_Group__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>aXcessa Groups</relationshipLabel>
    <relationshipName>aXcessa_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>