unpackaged/main/default/objects/axcessa_Group__c/fields/Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>axcessa_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>