unpackaged/main/default/objects/axcessa_Group__c/fields/Software_Engagement_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Software_Engagement_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Software Engagement Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>aXcessa Groups (Software Engagement Specialist)</relationshipLabel>
    <relationshipName>axcessa_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>