unpackaged/main/default/objects/axcessa_Group__c/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent Account (code)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>axcessa_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>