unpackaged/main/default/objects/axcessa_Group__c/listViews/All_axcessa_Groups.listView-meta.xml
<ListView>
    <fullName>All_axcessa_Groups</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Active_Stores__c</columns>
    <columns>Number_of_Suspended_Stores__c</columns>
    <columns>Number_of_Inactive_Stores__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All axcessa Groups</label>
</ListView>